lab 2 task 1 data

--- a/waph.html
+++ b/waph.html
@@ -10,12 +10,65 @@
             <h2>Front-end Web development</h2>
             <h3>Instructor Dr. Phu Phung</h3>
         </div>
+
         <div id="menubar">
             <h3>Student: Saksh Menon</h3>
+            <div id="email" onclick="showhideEmail()">Show my email</div>
+            <script src="/email.js"></script>
+            <img src="OPT.png" alt="My headshot" width="50">
         </div>
+
+        <div id="'digital-clock"></div>
+        <canvas id="analog-clock" width="150" height="150" style="background-color:#999"></canvas>
+        <script src="https://waph-phung.github.io/clock.js"></script>
+        <script>
+            function displayTime() {
+                document.getElementById('digit-clock'),innerHTML = "Current time: " + new Date();
+            }
+            setInterval(displayTime, 500);
+        
+
+            var canvas = document.getElementById("analog-clock");
+            var ctx = canvas.getContext("2d");
+            var radius = canvas.height / 2;
+            ctx.translate(radius, radius);
+            radius = radius * 0.9
+            setInterval(drawClock, 1000);
+
+            function drawClock() {
+                drawFace(ctx, radius);
+                drawNumbers(ctx, radius);
+                drawTime(ctx, radius);
+            }
+        </script>
+
         <div id="main">
             <p>A simple HTML page</p>
             Using the <a href="https://www.w3schools.com/html/"> W3Schools template</a>
         </div>
     </body>
 </html>
+
+
+
+<hr>
+<b>Interaction with forms (GET)</b>
+<div>
+    <i>Form with an HTTP GET Request</i>
+    <form action="/echo.php" method="GET">
+        Your input: <input name="data">
+        <input type="submit" value="Submit">
+    </form>
+</div>
+<div>
+    <i>Form with an HTTP GET Request</i>
+    <form action="/echo.php" method="POST" name="echo_post">
+        Your input: <input name="data">
+        <input type="submit" value="Submit">
+    </form>
+</div>
+
+<hr>
+<b>Experiments with JavaScript code</b>
+<i>Inlined JavaScript</i>
+<div id="date" onclick="document.getElementById('date').innerHTML=Date()">Click here to show date</div>
