--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>Personal Project</title>
+        <title>Personal Portfolio</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
